--- a/javascript_dom_编程/10.javascript案例/Contract.html
+++ b/javascript_dom_编程/10.javascript案例/Contract.html
@@ -29,7 +29,7 @@
             </p>
             <p>
             <label for="email">Email:</label>
-                <input type="text" placeholder="Your email address" id="email" required="required">
+                <input type="email" placeholder="Your email address" id="email" required="required">
             </p>
             <p>
             <label for="message">Message:</label>
