--- a/javascript高级程序设计/03.基本概念/一元操作符/unaryOperators.html
+++ b/javascript高级程序设计/03.基本概念/一元操作符/unaryOperators.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="application/javascript" src="testStringJs.js"></script>
+    <script type="application/javascript" src="unaryOperator.js"></script>
 </head>
 <body>
-测试字符串
+测试一元操作符号
 </body>
 </html>
