--- a/Sample/backbone/01.todos/index.html
+++ b/Sample/backbone/01.todos/index.html
@@ -43,7 +43,7 @@
 
 <script src="../json2.js"></script>
 <script src="../jquery-3.3.1.js"></script>
-<script src="../underscore-min.js"></script>
+<script src="../underscore.js"></script>
 <script src="../backbone.js"></script>
 <script src="../backbone.localStorage.js"></script>
 <script src="../todos.js"></script>
