--- a/Sample/139邮箱/139邮箱.html
+++ b/Sample/139邮箱/139邮箱.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html style="overflow-x: auto;">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -609,16 +609,7 @@
             ].join("");
             document.write(html);
         })();
-
     </script>
-    <div class="tipsBox" style="margin-top: -48px; display: none;" id="indexLoadingDiv">
-        <div class="tipsBox-container">
-            <div class="tipsBox-aside float_l"><i class="i_email_accounts"></i></div>
-            <div class="tipsBox-main float_l"><h6>手机号码就是您的邮箱账号，方便易记</h6>
-                <div class="mtop_5"><img class="mright_5" src="refs/load.gif"><span>正在加载页面……</span></div>
-            </div>
-        </div>
-    </div>
 </div>
 <script>
     (function () {
