--- a/Sample/139邮箱/139副本.html
+++ b/Sample/139邮箱/139副本.html
@@ -735,7 +735,7 @@
             if (match && match[1]) {
                 window.sid = match[1];
             } else {
-                location.href = "http://mail.10086.cn";
+                //location.href = "http://mail.10086.cn";
             }
         })();
         m139LoadScript(getProtocol() + location.host + getRootPath() + "/conf/config." + document.domain + ".js?sid=" + sid, document);
